--- a/dark.mode.css
+++ b/dark.mode.css
@@ -200,7 +200,7 @@ html.theme-dark .menu_d90b3d {
 }
 
 html.theme-dark .wordmark_a934d8::before {
-    content: "‏‏‎ c h i l l a x";
+    content: "‏‏‎ L I L Y";
     font-size: 12px;
     font-family: "Poiret one" !important;
     position: fixed;
