--- a/dark.mode.css
+++ b/dark.mode.css
@@ -216,7 +216,7 @@ html.theme-dark .wordmark_a934d8::before {
 }
 
 .wordmark_a934d8:hover:before {
-    content: "‏‏‎ c h i l l a x";
+    content: "‏‏‎ L I L Y";
     letter-spacing: 2px;
 }
 
